removed ugly code that tried too hard to get compose working