@@ -12,19 +12,15 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.StandardOpenOption;
-import java.security.MessageDigest;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 class PipelineDevServicesProcessorTest {
 
     private static final String COMPOSE_FILE = "compose-devservices.yml";
-    private static final String VERSION_FILE = ".version";
     private static final String FEATURE = "pipeline-devservices";
     private static final String COMPOSE_PREFIX = "quarkus.compose.devservices.";
 
@@ -53,22 +49,19 @@ class PipelineDevServicesProcessorTest {
 
     @Test
     void setupComposeFile_extractsAndProducesRuntimeConfig(@TempDir Path temp) throws Exception {
-        TestConfig cfg = new TestConfig(true, temp.toString(), Optional.empty(), true, false);
+        TestConfig cfg = new TestConfig(true, temp.toString(), Optional.empty());
 
         PipelineDevServicesProcessor p = new PipelineDevServicesProcessor();
         DevServicesResultBuildItem result = p.setupComposeFile(cfg);
 
-        // Files are created
+        // Compose file is created
         Path composePath = temp.resolve(COMPOSE_FILE);
-        Path versionPath = temp.resolve(VERSION_FILE);
         assertTrue(Files.exists(composePath), "Compose file should be extracted");
-        assertTrue(Files.exists(versionPath), "Version file should be written");
         assertTrue(Files.size(composePath) > 0, "Compose file should not be empty");
 
-        // Version file content matches resource SHA
-        String expectedSha = sha256(readResourceBytes());
-        String versionContent = Files.readString(versionPath);
-        assertTrue(versionContent.contains("sha=" + expectedSha));
+        // Content matches the classpath resource
+        assertArrayEquals(readResourceBytes(), Files.readAllBytes(composePath),
+                "Extracted file should match the classpath resource");
 
         assertNotNull(result);
         assertEquals(FEATURE, result.getName());
@@ -86,14 +79,13 @@ class PipelineDevServicesProcessorTest {
 
     @Test
     void setupComposeFile_respectsDisabledFlag(@TempDir Path temp) throws Exception {
-        TestConfig cfg = new TestConfig(false, temp.toString(), Optional.empty(), true, false);
+        TestConfig cfg = new TestConfig(false, temp.toString(), Optional.empty());
 
         PipelineDevServicesProcessor p = new PipelineDevServicesProcessor();
         DevServicesResultBuildItem result = p.setupComposeFile(cfg);
 
         // No files created
         assertFalse(Files.exists(temp.resolve(COMPOSE_FILE)));
-        assertFalse(Files.exists(temp.resolve(VERSION_FILE)));
 
         assertNotNull(result);
         assertEquals(FEATURE, result.getName());
@@ -106,125 +98,85 @@ class PipelineDevServicesProcessorTest {
         PipelineDevServicesProcessor p = new PipelineDevServicesProcessor();
 
         // Custom project name
-        TestConfig cfgCustom = new TestConfig(true, temp.resolve("c1").toString(), Optional.of("custom"), true, false);
+        TestConfig cfgCustom = new TestConfig(true, temp.resolve("c1").toString(), Optional.of("custom"));
         DevServicesResultBuildItem custom = p.setupComposeFile(cfgCustom);
         assertEquals("custom", custom.getConfig().get(COMPOSE_PREFIX + "project-name"));
 
         // Blank should fallback to default
-        TestConfig cfgBlank = new TestConfig(true, temp.resolve("c2").toString(), Optional.of(""), true, false);
+        TestConfig cfgBlank = new TestConfig(true, temp.resolve("c2").toString(), Optional.of(""));
         DevServicesResultBuildItem blank = p.setupComposeFile(cfgBlank);
         assertEquals("pipeline-shared-devservices", blank.getConfig().get(COMPOSE_PREFIX + "project-name"));
     }
 
     @Test
-    void setupComposeFile_noUpdateWhenVersionMatches(@TempDir Path temp) throws Exception {
+    void setupComposeFile_doesNotOverwriteExistingFile(@TempDir Path temp) throws Exception {
         PipelineDevServicesProcessor p = new PipelineDevServicesProcessor();
-        TestConfig cfg = new TestConfig(true, temp.toString(), Optional.empty(), true, false);
+        TestConfig cfg = new TestConfig(true, temp.toString(), Optional.empty());
 
         // First run extracts
         p.setupComposeFile(cfg);
-        byte[] initial = Files.readAllBytes(temp.resolve(COMPOSE_FILE));
+        Path compose = temp.resolve(COMPOSE_FILE);
+        byte[] initial = Files.readAllBytes(compose);
 
-        // Second run should not change the file
+        // Simulate manual edit
+        byte[] edited = "name: my-custom-compose\nservices: {}\n".getBytes();
+        Files.write(compose, edited);
+
+        // Second run should NOT overwrite
         p.setupComposeFile(cfg);
-        byte[] second = Files.readAllBytes(temp.resolve(COMPOSE_FILE));
-        assertArrayEquals(initial, second);
+        byte[] afterSecondRun = Files.readAllBytes(compose);
+        assertArrayEquals(edited, afterSecondRun,
+                "Write-once: existing compose file should not be overwritten");
     }
 
     @Test
-    void setupComposeFile_autoUpdatesWhenVersionDiffersAndNotEdited(@TempDir Path temp) throws Exception {
+    void setupComposeFile_extractsWhenFileDeleted(@TempDir Path temp) throws Exception {
         PipelineDevServicesProcessor p = new PipelineDevServicesProcessor();
-        TestConfig cfg = new TestConfig(true, temp.toString(), Optional.empty(), true, false);
+        TestConfig cfg = new TestConfig(true, temp.toString(), Optional.empty());
 
-        // Prepare an older version: write different content and matching version sha
-        Path compose = temp.resolve(COMPOSE_FILE);
-        Path version = temp.resolve(VERSION_FILE);
-        Files.createDirectories(temp);
-        byte[] oldContent = "version: '3'\nservices: {}\n".getBytes();
-        Files.write(compose, oldContent, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
-        String oldSha = sha256(oldContent);
-        Files.writeString(version, "sha=" + oldSha + "\n");
-
-        // Run - should auto-update to resource bytes (no backup since not edited per recorded sha)
+        // First run extracts
         p.setupComposeFile(cfg);
+        Path compose = temp.resolve(COMPOSE_FILE);
+        assertTrue(Files.exists(compose));
 
-        byte[] now = Files.readAllBytes(compose);
-        byte[] expected = readResourceBytes();
-        assertArrayEquals(expected, now, "Compose file should be updated to resource content");
+        // Delete it
+        Files.delete(compose);
+        assertFalse(Files.exists(compose));
 
-        String versionContent = Files.readString(version);
-        assertTrue(versionContent.contains("sha=" + sha256(expected)));
+        // Second run should re-extract
+        p.setupComposeFile(cfg);
+        assertTrue(Files.exists(compose), "Compose file should be re-extracted after deletion");
+        assertArrayEquals(readResourceBytes(), Files.readAllBytes(compose),
+                "Re-extracted file should match the classpath resource");
     }
 
     @Test
-    void setupComposeFile_skipsAutoUpdateWhenManuallyEdited(@TempDir Path temp) throws Exception {
+    void setupComposeFile_extractsInitScript(@TempDir Path temp) throws Exception {
         PipelineDevServicesProcessor p = new PipelineDevServicesProcessor();
-        TestConfig cfg = new TestConfig(true, temp.toString(), Optional.empty(), true, false);
+        TestConfig cfg = new TestConfig(true, temp.toString(), Optional.empty());
 
-        // Start from extracted
         p.setupComposeFile(cfg);
 
-        Path compose = temp.resolve(COMPOSE_FILE);
-        Path version = temp.resolve(VERSION_FILE);
-        byte[] original = Files.readAllBytes(compose);
-        String recordedSha = Files.readString(version).trim().substring(4);
-        assertEquals(sha256(original), recordedSha);
-
-        // Simulate manual edit: change file without changing recorded version sha
-        Files.writeString(compose, new String(original) + "# edited\n");
-
-        // Run - should detect edit and skip auto-update
-        p.setupComposeFile(cfg);
-        byte[] after = Files.readAllBytes(compose);
-        assertNotEquals(sha256(after), sha256(readResourceBytes()), "File should not be auto-updated");
-        // version file should still contain old sha
-        assertTrue(Files.readString(version).contains("sha=" + recordedSha));
+        Path initScript = temp.resolve("init-postgres.sql");
+        assertTrue(Files.exists(initScript), "Init script should be extracted");
+        assertTrue(Files.size(initScript) > 0, "Init script should not be empty");
     }
 
     @Test
-    void setupComposeFile_forceUpdateCreatesBackupWhenEdited(@TempDir Path temp) throws Exception {
+    void setupComposeFile_initScriptNotOverwritten(@TempDir Path temp) throws Exception {
         PipelineDevServicesProcessor p = new PipelineDevServicesProcessor();
-        TestConfig cfg = new TestConfig(true, temp.toString(), Optional.empty(), true, true);
+        TestConfig cfg = new TestConfig(true, temp.toString(), Optional.empty());
 
-        // Extract first
+        // First run
         p.setupComposeFile(cfg);
-        Path compose = temp.resolve(COMPOSE_FILE);
-        Path version = temp.resolve(VERSION_FILE);
+        Path initScript = temp.resolve("init-postgres.sql");
+        byte[] edited = "-- custom init\n".getBytes();
+        Files.write(initScript, edited);
 
-        // Edit file to simulate manual changes
-        Files.writeString(compose, Files.readString(compose) + "# manual edit\n");
-        // Also simulate that extension resource has a new version by changing stored sha
-        Files.writeString(version, "sha=0000000000000000000000000000000000000000000000000000000000000000\n");
-
-        // Run - should force update and create backup due to edit
+        // Second run should not overwrite
         p.setupComposeFile(cfg);
-
-        // New content equals resource
-        assertArrayEquals(readResourceBytes(), Files.readAllBytes(compose));
-        // Version updated to resource sha
-        assertEquals(sha256(readResourceBytes()), Files.readString(version).trim().substring(4));
-        // Backup exists (pattern .backup.YYYYMMDD-HHMMSS)
-        List<Path> backups = Files.list(temp)
-                .filter(pth -> pth.getFileName().toString().startsWith(COMPOSE_FILE + ".backup."))
-                .collect(Collectors.toList());
-        assertFalse(backups.isEmpty(), "Backup file should be created when edited and forceUpdate=true");
-    }
-
-    @Test
-    void setupComposeFile_throwsWhenYamlEmptyButVersionMatches(@TempDir Path temp) throws Exception {
-        PipelineDevServicesProcessor p = new PipelineDevServicesProcessor();
-        TestConfig cfg = new TestConfig(true, temp.toString(), Optional.empty(), true, false);
-
-        // Create empty compose file but with matching version sha to skip update path
-        Path compose = temp.resolve(COMPOSE_FILE);
-        Path version = temp.resolve(VERSION_FILE);
-        Files.createDirectories(temp);
-        Files.writeString(compose, "");
-        String resourceSha = sha256(readResourceBytes());
-        Files.writeString(version, "sha=" + resourceSha + "\n");
-
-        RuntimeException ex = assertThrows(RuntimeException.class, () -> p.setupComposeFile(cfg));
-        assertTrue(ex.getMessage().contains("Failed to setup Pipeline Dev Services compose file"));
+        assertArrayEquals(edited, Files.readAllBytes(initScript),
+                "Write-once: existing init script should not be overwritten");
     }
 
     // Helpers
@@ -235,32 +187,14 @@ class PipelineDevServicesProcessorTest {
         }
     }
 
-    private static String sha256(byte[] data) throws Exception {
-        MessageDigest digest = MessageDigest.getInstance("SHA-256");
-        byte[] hash = digest.digest(data);
-        StringBuilder hex = new StringBuilder();
-        for (byte b : hash) {
-            String h = Integer.toHexString(0xff & b);
-            if (h.length() == 1) hex.append('0');
-            hex.append(h);
-        }
-        return hex.toString();
-    }
-
     private record TestConfig(boolean enabled,
                               String targetDir,
-                              Optional<String> projectName,
-                              boolean autoUpdate,
-                              boolean forceUpdate) implements PipelineDevServicesConfig {
+                              Optional<String> projectName) implements PipelineDevServicesConfig {
         @Override
         public boolean enabled() { return enabled; }
         @Override
         public String targetDir() { return targetDir; }
         @Override
         public Optional<String> projectName() { return projectName; }
-        @Override
-        public boolean autoUpdate() { return autoUpdate; }
-        @Override
-        public boolean forceUpdate() { return forceUpdate; }
     }
 }
